# ImgMatchCascadeHash

./: .gitignore  CasHashing3D.sln  README.md  README.txt
CasHashing3D/: BucketBuilder.cc  BucketBuilder.h  BucketBuilderGPU.cu  BucketBuilderGPU.h  CMakeLists.txt  CasHashing3D.vcxproj  Common.h  EuclideanDistanceCalculatorGPU.cu  EuclideanDistanceCalculatorGPU.h  HashCalculatorGPU.cu  HashCalculatorGPU.h  HashDataGenerator.cc  HashDataGenerator.h  HashDataGeneratorGPU.cu  HashDataGeneratorGPU.h  ImageMatchPair.cc  ImageMatchPair.h  KeyFileReader.cc  KeyFileReader.h  Main.cc  Makefile  MatchPairGPU.cu  MatchPairGPU.h  Timer.h  TransferData.cc  TransferData.h  job.sh.in  kernel.cu  kernel_test.cu  kernel_test.h
CasHashing3D/Debug/: vc140.idb
CasHashing3D/Debug/CasHashing3D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CasHashing3D.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CasHashing3D/x64/Debug/: HashDataGeneratorGPU.cu.cache  HashDataGeneratorGPU.cu.deps  kernel.cu.cache  kernel_test.cu.cache  kernel_test.cu.deps  vc140.idb
CasHashing3D/x64/Debug/CasHashing3D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CasHashing3D.lastbuildstate
Data/: keys_path.txt  view_0000.keys  view_0001.keys  view_0002.keys  view_0003.keys  view_0004.keys  view_0005.keys  view_0006.keys  view_0007.keys  view_0008.keys  view_0009.keys  view_0010.keys
Debug/: CasHashing3D.ilk
